# LogSquirl-tcpdump

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  plugin.json  releases.json
.github/: CODEOWNERS
.github/workflows/: ci-build.yml  ci-release.yml
docs/: DEVELOPER_GUIDE.md
include/: logsquirl_plugin_api.h
src/: packet_formatter.cpp  packet_formatter.h  pcap_parser.cpp  pcap_parser.h  plugin.cpp  plugin.h  sidebarwidget.cpp  sidebarwidget.h
tests/: CMakeLists.txt  packet_formatter_test.cpp  pcap_parser_test.cpp  plugininfo_test.cpp  tests_main.cpp
